# Amplityper

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  IC-035-03-NS-S46-L001_QIAseq_190_plotting_data_with_freqs.tsv  README.md  data_manifest.yml  justfile  main.nf  nextflow.config  pyproject.toml  requirements-dev.txt  requirements.txt  run_all_amplicons.sh  tox.ini
.github/workflows/: docker-image.yaml
config/: Dockerfile  config.R  reporting.yaml  sc2-haplotyping.optionprofile
docs/amplityper_report/: amplityper_report.html  index.html  search.js
docs/read_zap_report/: index.html  read_zap_report.html  search.js
docs/resplice_primers/: index.html  resplice_primers.html  search.js
docs/split_primer_combos/: index.html  search.js  split_primer_combos.html
null/SRR23121149/: SRR23121149_QIAseq_168_haplotypes.fasta
resources/: multi_run_reporting.yaml  qiaseq_direct_boosted.bed  run_all_amplicons.nu  run_all_amplicons.sh  sars-cov-2_genes.fasta
