[tool.poetry]
name = "read-zap"
version = "0.1.0"
description = "Read Extraction And De novo assembly for Zero-error Amplicon Phasing."
authors = ["Nicholas Minor <nrminor@wisc.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
result = "^0.14.0"
polars = "^0.19.17"
sgkit = "^0.7.0"
scikit-allel = "^1.3.7"
strictyaml = "^1.7.3"
pathlib = "^1.0.1"
xlsxwriter = "^3.1.9"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
blackdoc = "^0.3.9"
pdoc = "^14.1.0"
mypy = "^1.7.1"
ipykernel = "^6.27.1"
quarto = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
